--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,13 @@ environment:
   sdk: ^3.10.4
 
 dependencies:
+  file_picker: ^10.3.10
   flutter:
     sdk: flutter
   get: ^4.7.3
+  http: ^1.6.0
+  mime: ^1.0.3
+  http_parser: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^6.0.0
